--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,11 @@ footer {
     font-weight: 400;
     font-size: 18px;
 }
+
+#error {
+    text-align: center;
+    color: #fd0c49;
+    font-weight: 300;
+    font-size: 14px;
+    margin: 10px 0px;
+}
