--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,16 @@ footer {
     font-weight: 100;
 }
 
+/*Clases*/
+.avatarItem {
+    background-color: #f5f5f5;
+    border: solid 1px #fd0c49;
+    border-radius: 5px;
+    width: 40px;
+    height: 40px;
+    padding-top: 5px;
+    padding-left: 5px;
+}
 
 /* IDs*/
 
@@ -90,4 +100,29 @@ footer {
     font-weight: 300;
     font-size: 14px;
     margin: 10px 0px;
+}
+
+#avatar {
+    float: left;
+}
+
+#avatarContainer {
+    display: flex;
+    background-color: #fff;
+    border: solid 1px #fd0c49;
+    border-radius: 5px;
+    width: 125px;
+    height: 125px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+#avatargrid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-top: 30px;
 }
